# fullstack-template

./: .gitignore  README.md  package.json
.github/workflows/: backend.yml  frontend.yml
back/: README.md
backend/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
backend/api/: lifespan.py  main.py
backend/api/clients/: __init__.py  health.py
backend/api/protocols/: __init__.py  health.py
backend/api/routers/: health.py
backend/api/schemas/: __init__.py  health.py
backend/api/services/: __init__.py  health.py
backend/tests/api/router/: test_health_router.py
backend/tests/clients/: test_health.py
backend/tests/routers/: test_health.py
backend/tests/services/: test_health.py
frontend/: README.md  orval.config.ts  package.json
frontend/src/components/: HealthStatusChecker.tsx
src/components/: Sample.tsx
