[project]
name = "backend"
version = "0.1.0"
description = "A FastAPI backend for the project"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
